--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ button{
     border: none;
     font-size: 2rem;
     color: #fff;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
